# simple-vm

./: .gitignore  .project_env  CMakeBuildOpts.txt  CMakeLists.txt  README.md  README.old.md  TODO.md
src/: CMakeLists.txt
src/assembler/: CMakeLists.txt  code_buffer.c  code_buffer.h  data_buffer.c  file_io.c  file_io.h  main.c  parser.y  scanner.l  symbols.c  symbols.h  tokens.c
src/common/: CMakeLists.txt  common.h  fileio.c  fileio.h  string_buffer.c  string_buffer.h
src/main/: CMakeLists.txt  main.c
src/vm_common/: CMakeLists.txt  code_buffer.c  code_buffer.h  data_buffer.c  data_buffer.c.old  data_buffer.h  data_item.c  data_item.h  vm_common.h  vm_lists.h
